volexc/tests/ui/check_duplicate_enum_variant.out
Error: duplicate variant `Bar` in enum `Foo`
   ╭─[ check_duplicate_enum_variant.vol:3:5 ]
   │
 3 │     Bar = 1;
   │     ─┬─  
   │      ╰─── first defined here
 4 │     Bar = 2;
   │     ─┬─  
   │      ╰─── redefined here
───╯