volexc/tests/ui/check_duplicate_enum_variant.vol
// Duplicate variant in enum
enum Foo {
    Bar = 1;
    Bar = 2;
}
